# rickhenry.studio

./: .gitattributes  .gitignore  Dockerfile  devenv.nix  litestream.dev.yml  pyproject.toml
.github/workflows/: docker.yml
design/: index.html  main.css  package.json  pnpm-lock.yaml  style.css  tailwind.config.js
design/blog/: index.html
public/: .gitignore
studioblog/: bun.lockb  manage.py  package.json  tailwind.config.js
studioblog/blog/: models.py
studioblog/blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_blogpagetag_delete_blogpagegalleryimage_and_more.py  0005_blogtagindexpage.py  0006_alter_blogpage_body.py  0007_alter_blogpage_body.py
studioblog/blog/templates/blog/: blog_index_page.html  blog_page.html  blog_tag_index_page.html
studioblog/blog/templates/blog/components/: post_card.html
studioblog/home/: models.py  views.py
studioblog/home/migrations/: 0003_homepage_body.py  0004_rename_body_homepage_intro_homepage_intro_title.py  0005_practicetoolindexpage_practicetoolpage.py  0006_practicetooltagindexpage_practicetoolpage_featured_and_more.py  0007_remove_practicetoolpage_tags_delete_practicetooltag.py  0008_practicetooltag_practicetoolpage_tags.py  0009_aboutpage.py
studioblog/home/templates/home/: about_page.html  contact.html  home_page.html  practice_tool_index_page.html  practice_tool_page.html  practice_tool_tag_index_page.html  thank-you.html
studioblog/search/: views.py
studioblog/studioblog/: blocks.py  settings.py  types.py  urls.py  wagtail_hooks.py  wsgi.py
studioblog/studioblog/static-src/: main.css
studioblog/studioblog/static/css/: .gitignore
studioblog/studioblog/templates/: base.html  base_htmx.html
studioblog/studioblog/templates/pagination/: links.html
studioblog/studioblog/templatetags/: customfilters.py
(+23 files in other folders)
