[tool.poetry]
name = "studioblog"
version = "0.1.0"
description = ""
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^6.0"
dj-database-url = "^2.3.0"
whitenoise = "^6.8.0"
# webauthn = "^1.11.0"
django-htmx = "^1.21.0"
django-stubs = "^5.1.1"
django-stubs-ext = "^5.1.1"
# opencv-python = "^4.8.1.78"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pylint = "*"
djlint = "*"
pre-commit = "*"
pyproject-flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.django-stubs]
django_settings_module = "studiowiki.settings"

[tool.isort]
skip = [".gitignore", ".dockerignore"]
skip_glob = [".venv/*"]
profile = "black"

[tool.flake8]
max-line-length = 88
